<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bill_amount"
        style="@style/Stylist"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/bill_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billEntry"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/enter_dollar_amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill_amount"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/black"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/tip_amount"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decreaseButton" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/total_bill"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipResult" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_text" />

    <ImageButton
        android:id="@+id/decreaseButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/decrease"
        app:layout_constraintEnd_toStartOf="@+id/tipNumber"
        app:layout_constraintTop_toBottomOf="@+id/tippercent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageButton
        android:id="@+id/increaseButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/increase"
        app:layout_constraintBottom_toBottomOf="@+id/decreaseButton"
        app:layout_constraintStart_toEndOf="@+id/tipNumber"
        app:layout_constraintTop_toTopOf="@+id/decreaseButton"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <TextView
        android:id="@+id/tipNumber"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/decreaseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decreaseButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tippercent"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/tip"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>